operator/src/desired/snapshots/balerix_operator__desired__plugin__tests__plugin_claim.snap
---
source: src/desired/plugin.rs
expression: o.claim
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  labels:
    app.kubernetes.io/managed-by: balerix-operator
    balerix.ai/component: plugin
    balerix.ai/daemon: default
    balerix.ai/plugin: web
  name: balerix-plugin-web-scratch
  namespace: team-a
  ownerReferences:
    - apiVersion: balerix.ai/v1alpha1
      controller: true
      kind: Plugin
      name: web
      uid: plugin-uid
spec:
  accessModes:
    - ReadWriteOnce
  resources:
    requests:
      storage: 1Gi
