operator/src/desired/snapshots/balerix_operator__desired__plugin__tests__plugin_secret_serving.snap
---
source: src/desired/plugin.rs
expression: o.serving
---
apiVersion: v1
kind: Secret
metadata:
  annotations:
    balerix.ai/not-after: "1807776000"
  labels:
    app.kubernetes.io/managed-by: balerix-operator
    balerix.ai/component: plugin
    balerix.ai/daemon: default
    balerix.ai/plugin: web
  name: balerix-plugin-web-tls
  namespace: team-a
  ownerReferences:
    - apiVersion: balerix.ai/v1alpha1
      controller: true
      kind: Plugin
      name: web
      uid: plugin-uid
stringData:
  tls.crt: TLS CERT
  tls.key: TLS KEY
type: kubernetes.io/tls
