operator/src/desired/snapshots/balerix_operator__desired__plugin__tests__plugin_secret_token.snap
---
source: src/desired/plugin.rs
expression: o.token
---
apiVersion: v1
kind: Secret
metadata:
  labels:
    app.kubernetes.io/managed-by: balerix-operator
    balerix.ai/component: plugin
    balerix.ai/daemon: default
    balerix.ai/plugin: web
  name: balerix-plugin-web-token
  namespace: team-a
  ownerReferences:
    - apiVersion: balerix.ai/v1alpha1
      controller: true
      kind: Plugin
      name: web
      uid: plugin-uid
stringData:
  token: TOKEN
type: Opaque
